tests/ui/error-codes/E0271.rs
trait Trait { type AssociatedType; }

fn foo<T>(t: T) where T: Trait<AssociatedType=u32> {
    println!("in foo");
}

impl Trait for i8 { type AssociatedType = &'static str; }

fn main() {
    foo(3_i8); //~ ERROR E0271
}
